--- a/caliCleanerz/src/app/components/imageShuffle.module.css
+++ b/caliCleanerz/src/app/components/imageShuffle.module.css
@@ -15,6 +15,7 @@
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
   cursor: pointer;
   transition: transform 0.5s ease, top 0.5s ease, left 0.5s ease, z-index 0.5s ease;
+  image-orientation: none;
 }
 
 .imageWrapper img {
